[workspace]
members = ["tuic", "tuic-quinn", "tuic-server", "tuic-client"]
resolver = "2"

[workspace.package]
authors = ["EAimTY <ea.imty@gmail.com>", "Itsusinn <root@itsusin.eu.org>"]
version = "1.3.5"
rust-version = "1.80.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/Itsusinn/tuic"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3
