[package]
name = "tuic-quinn"
version.workspace = true
authors.workspace = true
description = "A thin layer on top of quinn to provide functions for TUIC"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing = { version = "0.1", default-features = false}
bytes = { version = "1", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["io", "std"] }
quinn = { version = "0.11", default-features = false, features = ["futures-io"]}
thiserror = { version = "2", default-features = false }
tuic = { path = "../tuic", default-features = false, features = ["async_marshal", "marshal", "model"] }
uuid = { version = "1", default-features = false, features = ["std"] }
