[package]
name = "tuic"
version.workspace = true
authors.workspace = true
description = "Delicately-TUICed 0-RTT proxy protocol"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[features]
async_marshal = ["bytes", "futures-util", "thiserror"]
marshal = ["bytes", "thiserror"]
model = ["parking_lot", "register-count", "thiserror"]

[dependencies]
bytes = { version = "1", default-features = false, features = ["std"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["io", "std"], optional = true }
parking_lot = { version = "0.12", default-features = false, optional = true }
register-count = { version = "0.1", default-features = false, features = ["std"], optional = true }
thiserror = { version = "2", default-features = false, optional = true }
uuid = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
tuic = { path = ".", features = ["async_marshal", "marshal", "model"] }

[package.metadata.docs.rs]
all-features = true
